// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileSliderSkeleton > should render 1`] = `
<DocumentFragment>
  <div>
    <div
      class="space-y-3"
    >
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileSliderSkeleton > should render with dots 1`] = `
<DocumentFragment>
  <div>
    <div
      class="space-y-3"
    >
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-3 flex h-3 justify-center gap-3 leading-3"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton h-3 w-3 rounded-full"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton h-3 w-3 rounded-full"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileSliderSkeleton > should render with length 1`] = `
<DocumentFragment>
  <div>
    <div
      class="space-y-3"
    >
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border border-theme-secondary-200 p-1 dark:border-theme-secondary-800"
        data-testid="ProfileRowSkeleton"
      >
        <div
          class="h-10 w-10 bg-theme-secondary-100 dark:bg-theme-secondary-800"
        />
        <div
          class="mr-1.5 pr-1.5 text-theme-secondary-200 dark:text-theme-secondary-800 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="10.002"
              cy="2.99609"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 2.99609)"
            />
            <circle
              cx="10.002"
              cy="9.99805"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 9.99805)"
            />
            <circle
              cx="10.002"
              cy="17"
              fill="currentColor"
              r="2"
              transform="rotate(90 10.002 17)"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
